# verified-matching-engine

./: .gitignore  CLAUDE.md  Main.lean  MatchingEngine.lean  PAPER_PLAN.md  README.md  claude-code-c-prompt.md  claude-code-prompt.md  matching-engine-formal-spec.md  paper.md  paper.tex
matcher_stl/: BUG_LOG.md  CMakeLists.txt  matching-engine-formal-spec.md
matcher_stl/shadow_runs/cov_20260419-204202/: coverage.engine.h.b1424d0c555414e667a791cd1faa9f61.html  coverage.functions.html  coverage.html  coverage.txt  summary.tsv
matcher_stl/shadow_runs/cov_big_20260419-204704/: coverage.engine.h.b1424d0c555414e667a791cd1faa9f61.html  coverage.functions.html  coverage.html  coverage.json  coverage.txt  summary.tsv
matcher_stl/shadow_runs/sweep_20260419-202514/: summary.tsv
matcher_stl/src/: engine.h  types.h
matcher_stl/tests/: test_correctness.cpp  test_performance.cpp
matcher_stl/tools/: shadow_coverage_sweep.sh  shadow_sweep.sh
matcher_stl/tools/conformance/: MAPPING.md  conformance_harness.cpp  convert_matching_traces.py  shadow_test.cpp
matcher_stl/tools/conformance/targets/: target_amend.cfg  target_depth.cfg  target_iceberg.cfg  target_multi_level.cfg  target_partial_fill.cfg  target_post_only.cfg  target_stop_trigger.cfg  target_stops.cfg  target_trade.cfg  target_two_sided.cfg
matcher_stl/tools/conformance/traces/: sim_100.txt  target_amend.txt  target_depth.txt  target_iceberg.txt  target_multi_level.txt  target_partial_fill.txt  target_post_only.txt  target_stop_trigger.txt  target_stops.txt  target_trade.txt  target_two_sided.txt
spec/: REPORT.md  (+3 more)
(+201 files in other folders)
